--- a/index.html
+++ b/index.html
@@ -721,6 +721,6 @@
 
     <!-- JavaScript -->
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/update-links.js"></script>
+    <script src="assets/js/download-handler.js"></script>
 </body>
 </html>
