--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <ul class="nav">
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#productos">Productos</a></li>
-                        <li><a href="#empresa">Empresa</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
                 </nav>
